--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fragmentado</title>
 </head>
-<body>
+<body colorbackground='black'>
     <h1>Bienvenido al curso</h1>
 
     <img src="programacion.png"></img>
 </body>
+
 </html>
