--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fragmentado</title>
 </head>
-<body colorbackground='black'>
+<body background='black'>
     <h1>Bienvenido al curso</h1>
 
     <img src="programacion.png"></img>
 </body>
 
 </html>
+
