--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fragmentado</title>
 </head>
-<body background-color='black'>
+<body color='black'>
     <h1>Bienvenido al curso</h1>
 
     <img src="programacion.png"></img>
 </body>
 
 </html>
+
 
 
