--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fragmentado</title>
 </head>
-<body bgcolor='black'>
+<body bgcolor="#0d1117">
     <h1>Bienvenido al curso</h1>
 
     <img src="programacion.png"></img>
 </body>
 
 </html>
+
 
 
 
