--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <title>Fragmentado</title>
 </head>
 <body bgcolor="#000000">
-    <h1>Bienvenido al curso</h1>
-
+    <h1 style="color: white;">Fragmentado(Split)</h1>
+     <p style="color: white;">Título original: Split<br>Director: M. Night Shyamalan<br>Año de estreno: 2016<br>Duración: 117 minutos<br>Género: Thriller psicológico, Suspenso
+         <br>País: Estados Unidos<br>Clasificación: +13 / PG-13
+     </p>
     <img src="programacion.png"></img>
 </body>
 
 </html>
+
 
 
 
