--- a/index.html
+++ b/index.html
@@ -7,13 +7,32 @@
 </head>
 <body bgcolor="#000000">
     <h1 style="color: white;">Fragmentado(Split)</h1>
+    <img src="fragmentado.png"></img>
      <p style="color: white;">Título original: Split<br>Director: M. Night Shyamalan<br>Año de estreno: 2016<br>Duración: 117 minutos<br>Género: Thriller psicológico, Suspenso
          <br>País: Estados Unidos<br>Clasificación: +13 / PG-13
      </p>
-    <img src="programacion.png"></img>
+
+      <h1 style="color: white;">Sinopsis</h1>
+     <p style="color: white;">Fragmentado es un thriller psicológico dirigido por M. Night Shyamalan que explora los límites de la mente humana. <br>
+         La historia sigue a Kevin Wendell Crumb, un hombre que padece Trastorno de Identidad Disociativo (TID) y alberga 23 personalidades distintas dentro de sí. <br>
+         Cuando secuestra a tres adolescentes,sus múltiples identidades comienzan a manifestarse, dejando entrever la llegada de una temida y poderosa personalidad número 24:
+         La Bestia.</p> <p style="color: white;">Mientras las jóvenes intentan escapar, deben interactuar con algunas de sus personalidades, <br> incluyendo a una estricta mujer llamada Patricia,
+         un obsesivo joven llamado Dennis y a Hedwig, un niño de 9 años. <br> Con el tiempo corriendo en su contra, descubren que Kevin es mucho más peligroso de lo que parece.
+     </p>
+    
+ <h1 style="color: white;">Reparto principal</h1>
+     <p style="color: white;">James McAvoy como Kevin Wendell Crumb y sus múltiples personalidades<br>Anya Taylor-Joy como Casey Cooke<br>Betty Buckley como la Dra. Karen Fletcher
+         <br>Haley Lu Richardson como Claire Benoit<br>Jessica Sula como Marcia
+     </p>
+     <h1 style="color: white;">Curiosidades</h1>
+     <p style="color: white;">James McAvoy interpreta más de 8 personalidades en pantalla, aunque el personaje tiene 24 en total.<br>Es parte de una trilogía informal conocida como la Trilogía de Eastrail 177,
+         junto a El protegido (2000) y Glass (2019).<br>
+M. Night Shyamalan autofinanció la película con un presupuesto estimado de 9 millones de dólares, y recaudó más de 278 millones en taquilla mundial.
+     </p>
 </body>
 
 </html>
+
 
 
 
