--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 <body bgcolor="#000000">
     <h1 style="color: white;">Fragmentado(Split)</h1>
     <img src="fragmentado.png"></img>
-     <p style="color: white;">Título original: Split<br>Director: M. Night Shyamalan<br>Año de estreno: 2016<br>Duración: 117 minutos<br>Género: Thriller psicológico, Suspenso
-         <br>País: Estados Unidos<br>Clasificación: +13 / PG-13
-     </p>
+     <ul style="color: white;">
+  <li><strong>Título original:</strong> Split</li>
+  <li><strong>Director:</strong> M. Night Shyamalan</li>
+  <li><strong>Año de estreno:</strong> 2016</li>
+  <li><strong>Duración:</strong> 117 minutos</li>
+  <li><strong>Género:</strong> Thriller psicológico, Suspenso</li>
+  <li><strong>País:</strong> Estados Unidos</li>
+  <li><strong>Clasificación:</strong> +13 / PG-13</li>
+ </ul>
 
       <h1 style="color: white;">Sinopsis</h1>
      <p style="color: white;">Fragmentado es un thriller psicológico dirigido por M. Night Shyamalan que explora los límites de la mente humana. <br>
@@ -20,7 +26,7 @@
          un obsesivo joven llamado Dennis y a Hedwig, un niño de 9 años. <br> Con el tiempo corriendo en su contra, descubren que Kevin es mucho más peligroso de lo que parece.
      </p>
     
- <h1 style="color: white;">Reparto principal</h1>
+ <a href="https://www.sensacine.com.mx/peliculas/pelicula-240516/reparto/" style="color: white;">Reparto principal</a>
      <p style="color: white;">James McAvoy como Kevin Wendell Crumb y sus múltiples personalidades<br>Anya Taylor-Joy como Casey Cooke<br>Betty Buckley como la Dra. Karen Fletcher
          <br>Haley Lu Richardson como Claire Benoit<br>Jessica Sula como Marcia
      </p>
@@ -32,6 +38,7 @@ M. Night Shyamalan autofinanció la película con un presupuesto estimado de 9 m
 </body>
 
 </html>
+
 
 
 
