--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
          un obsesivo joven llamado Dennis y a Hedwig, un niño de 9 años. <br> Con el tiempo corriendo en su contra, descubren que Kevin es mucho más peligroso de lo que parece.
      </p>
     
- <a href="https://www.sensacine.com.mx/peliculas/pelicula-240516/reparto/" style="color: white;">Reparto principal</a>
+ <a href="https://www.sensacine.com.mx/peliculas/pelicula-240516/reparto/" style="color: white;"><h1>Reparto principal</h1></a>
      <p style="color: white;">James McAvoy como Kevin Wendell Crumb y sus múltiples personalidades<br>Anya Taylor-Joy como Casey Cooke<br>Betty Buckley como la Dra. Karen Fletcher
          <br>Haley Lu Richardson como Claire Benoit<br>Jessica Sula como Marcia
      </p>
@@ -38,6 +38,7 @@ M. Night Shyamalan autofinanció la película con un presupuesto estimado de 9 m
 </body>
 
 </html>
+
 
 
 
