--- a/horario.html
+++ b/horario.html
@@ -6,7 +6,7 @@
     <title>MI HORARIO</title>
      <style>
         table, th, td {
-  border:1px black;
+  border:1px solid black;
 }
     </style>
 </head>
@@ -89,3 +89,4 @@
 
 </body>
 </html>
+
